deploy: 4159d6896413379dbae44325e468517a1cbe92fb

--- a/about/index.html
+++ b/about/index.html
@@ -99,7 +99,7 @@ window.onload = wrap_img;
   <li>Organized the <a href="https://codeforphilly.org/events/datahack202">2020 Data Hackathon</a>.</li>
   <li><a href="https://youtu.be/MK3f5wQzQuI">Likes</a> <a href="https://youtu.be/SchVZRkLUKc">music</a><a href="https://youtu.be/6WsWXzegqFQ">.</a></li>
   <li>Enjoys anything that is free, outside, or active.</li>
-  <li>Looks like this: <img src="/blog/images/marieke_jackson.jpg" alt="" title="Photo: [Claire Carroll](https://twitter.com/clairebcarroll)" /></li>
+  <li>Looks like this: <img src="/blog/images/marieke_jackson.jpg" alt="" title="Photo: Claire Carroll" /></li>
 </ol>
 
   </div>
