--- a/about/index.html
+++ b/about/index.html
@@ -9,13 +9,13 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="Miscellany by Marieke Jackson" />
 <meta property="og:description" content="Miscellany by Marieke Jackson" />
-<link rel="canonical" href="http://skinnamarieke.com/about/" />
-<meta property="og:url" content="http://skinnamarieke.com/about/" />
+<link rel="canonical" href="https://skinnamarieke.com/about/" />
+<meta property="og:url" content="https://skinnamarieke.com/about/" />
 <meta property="og:site_name" content="skinnamarieke" />
 <script type="application/ld+json">
-{"description":"Miscellany by Marieke Jackson","@type":"WebSite","url":"http://skinnamarieke.com/about/","name":"skinnamarieke","headline":"About Me","@context":"https://schema.org"}</script>
+{"description":"Miscellany by Marieke Jackson","@type":"WebSite","url":"https://skinnamarieke.com/about/","name":"skinnamarieke","headline":"About Me","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
-<link rel="stylesheet" href="/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="http://skinnamarieke.com/feed.xml" title="skinnamarieke" /><!-- the google_analytics_id gets auto inserted from the config file -->
+<link rel="stylesheet" href="/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://skinnamarieke.com/feed.xml" title="skinnamarieke" /><!-- the google_analytics_id gets auto inserted from the config file -->
 
 
 
@@ -28,15 +28,15 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="Miscellany by Marieke Jackson" />
 <meta property="og:description" content="Miscellany by Marieke Jackson" />
-<link rel="canonical" href="http://skinnamarieke.com/about/" />
-<meta property="og:url" content="http://skinnamarieke.com/about/" />
+<link rel="canonical" href="https://skinnamarieke.com/about/" />
+<meta property="og:url" content="https://skinnamarieke.com/about/" />
 <meta property="og:site_name" content="skinnamarieke" />
 <script type="application/ld+json">
-{"description":"Miscellany by Marieke Jackson","@type":"WebSite","url":"http://skinnamarieke.com/about/","name":"skinnamarieke","headline":"About Me","@context":"https://schema.org"}</script>
+{"description":"Miscellany by Marieke Jackson","@type":"WebSite","url":"https://skinnamarieke.com/about/","name":"skinnamarieke","headline":"About Me","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 <link href="https://unpkg.com/@primer/css/dist/primer.css" rel="stylesheet" />
-<link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css"><link type="application/atom+xml" rel="alternate" href="http://skinnamarieke.com/feed.xml" title="skinnamarieke" /><!-- the google_analytics_id gets auto inserted from the config file -->
+<link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css"><link type="application/atom+xml" rel="alternate" href="https://skinnamarieke.com/feed.xml" title="skinnamarieke" /><!-- the google_analytics_id gets auto inserted from the config file -->
 
 
 
