--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ search_exclude: true
 [![]({{ site.baseurl }}/images/jackalope_small.png)](https://youtu.be/EEEsX69iIxY)
 <div align ="center"> 
 
-    | Data | Civic Tech | Goofs |
+    | fun at parties |
 
 </div>
 
