--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ window.onload = wrap_img;
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/about/">About Me</a><a class="page-link" href="/search/">Search</a><a class="page-link" href="/categories/">Tags</a></div>
+        <div class="trigger"><a class="page-link" href="/about/">About</a><a class="page-link" href="/search/">Search</a><a class="page-link" href="/categories/">Tags</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
@@ -93,7 +93,7 @@ window.onload = wrap_img;
         <div class="home"><p><a href="https://youtu.be/EEEsX69iIxY"><img src="/images/jackalope_small.png" alt="" /></a></p>
 <div align="center"> 
 
-    | Data | Civic Tech | Goofs |
+    | fun at parties |
 
 </div>
 
