--- a/_pages/404.html
+++ b/_pages/404.html
@@ -19,7 +19,7 @@ search_exclude: true
 </style>
 
 <div class="container">
-  <h1>404</h1>
+  <h1>whoopsie doops</h1>
   <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p>Someone gave you a bad link, friend.</p>
 </div>
