deploy: 49b333d5f6e7aad2158115830c7cd7cedd00719c

--- a/about/index.html
+++ b/about/index.html
@@ -107,7 +107,7 @@ window.onload = wrap_img;
   <li><a href="https://www.vote.org/register-to-vote/">Register to Vote!</a></li>
 </ol>
 
-<p>![](/images/vote.jpg “yes, that is not a wig”ß)</p>
+<p><img src="/images/vote.jpg" alt="" /></p>
 
   </div>
 
