deploy: 2c28c30cfc6f1c1394cb1c51a69ae96d3ff5003d

--- a/about/index.html
+++ b/about/index.html
@@ -13,7 +13,7 @@
 <meta property="og:url" content="https://skinnamarieke.com/about/" />
 <meta property="og:site_name" content="skinnamarieke" />
 <script type="application/ld+json">
-{"description":"Miscellany by Marieke Jackson","@type":"WebSite","url":"https://skinnamarieke.com/about/","name":"skinnamarieke","headline":"About","@context":"https://schema.org"}</script>
+{"description":"Miscellany by Marieke Jackson","@type":"WebSite","headline":"About","url":"https://skinnamarieke.com/about/","name":"skinnamarieke","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://skinnamarieke.com/feed.xml" title="skinnamarieke" /><!-- the google_analytics_id gets auto inserted from the config file -->
 
@@ -32,7 +32,7 @@
 <meta property="og:url" content="https://skinnamarieke.com/about/" />
 <meta property="og:site_name" content="skinnamarieke" />
 <script type="application/ld+json">
-{"description":"Miscellany by Marieke Jackson","@type":"WebSite","url":"https://skinnamarieke.com/about/","name":"skinnamarieke","headline":"About","@context":"https://schema.org"}</script>
+{"description":"Miscellany by Marieke Jackson","@type":"WebSite","headline":"About","url":"https://skinnamarieke.com/about/","name":"skinnamarieke","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 <link href="https://unpkg.com/@primer/css/dist/primer.css" rel="stylesheet" />
