--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
 <meta property="og:url" content="https://skinnamarieke.com/404.html" />
 <meta property="og:site_name" content="skinnamarieke" />
 <script type="application/ld+json">
-{"description":"Miscellany by Marieke Jackson","@type":"WebPage","headline":"skinnamarieke","url":"https://skinnamarieke.com/404.html","@context":"https://schema.org"}</script>
+{"description":"Miscellany by Marieke Jackson","@type":"WebPage","url":"https://skinnamarieke.com/404.html","headline":"skinnamarieke","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://skinnamarieke.com/feed.xml" title="skinnamarieke" /><!-- the google_analytics_id gets auto inserted from the config file -->
 
@@ -32,7 +32,7 @@
 <meta property="og:url" content="https://skinnamarieke.com/404.html" />
 <meta property="og:site_name" content="skinnamarieke" />
 <script type="application/ld+json">
-{"description":"Miscellany by Marieke Jackson","@type":"WebPage","headline":"skinnamarieke","url":"https://skinnamarieke.com/404.html","@context":"https://schema.org"}</script>
+{"description":"Miscellany by Marieke Jackson","@type":"WebPage","url":"https://skinnamarieke.com/404.html","headline":"skinnamarieke","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 <link href="https://unpkg.com/@primer/css/dist/primer.css" rel="stylesheet" />
@@ -101,7 +101,7 @@ window.onload = wrap_img;
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/about/">About</a><a class="page-link" href="/search/">Search</a><a class="page-link" href="/categories/">Tags</a></div>
+        <div class="trigger"><a class="page-link" href="/about/">About</a><a class="page-link" href="/about/cards">Holiday Cards</a><a class="page-link" href="/search/">Search</a><a class="page-link" href="/categories/">Tags</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
@@ -147,7 +147,7 @@ window.onload = wrap_img;
       </div>
     </div>
 
-    <div class="social-links"><ul class="social-media-list"><li><a rel="me" href="https://github.com/mariekers" title="mariekers"><svg class="svg-icon grey"><use xlink:href="/assets/minima-social-icons.svg#github"></use></svg></a></li><li><a rel="me" href="https://twitter.com/skinnamarieke" title="skinnamarieke"><svg class="svg-icon grey"><use xlink:href="/assets/minima-social-icons.svg#twitter"></use></svg></a></li></ul>
+    <div class="social-links"><ul class="social-media-list"><li><a rel="me" href="https://github.com/mariekers" target="_blank" title="mariekers"><svg class="svg-icon grey"><use xlink:href="/assets/minima-social-icons.svg#github"></use></svg></a></li><li><a rel="me" href="https://twitter.com/skinnamarieke" target="_blank" title="skinnamarieke"><svg class="svg-icon grey"><use xlink:href="/assets/minima-social-icons.svg#twitter"></use></svg></a></li></ul>
 </div>
 
   </div>
