deploy: 77cd2f142001d893c78400618726d67fef3e7fc1

--- a/about/cards.html
+++ b/about/cards.html
@@ -125,11 +125,11 @@ window.onload = wrap_img;
 
 <h3 id="2015">2015</h3>
 <h4 id="eat-lightning-and-sht-thunder-boxing-day">Eat Lightning and Sh$t Thunder Boxing Day</h4>
-<p><img src="/images/holiday-cards/boxing-day-2015.jpg" alt="" /></p>
+<p><img src="/images/holiday-cards/boxing-day-2015.JPG" alt="" /></p>
 
 <h3 id="2016">2016</h3>
 <h4 id="dynamite-election-day-of-doom">Dynamite Election Day of Doom</h4>
-<p><img src="/images/holiday-cards/election-day-2016.jpg" alt="" /></p>
+<p><img src="/images/holiday-cards/election-day-2016.JPG" alt="" /></p>
 
 <h3 id="2017">2017</h3>
 <h4 id="catfish-black-friday">Catfish Black Friday</h4>
@@ -137,18 +137,18 @@ window.onload = wrap_img;
 
 <h3 id="2018">2018</h3>
 <h4 id="cake-smash-bastille-day">Cake Smash Bastille Day</h4>
-<p><img src="/images/holiday-cards/bastille-day-2018.jpg" alt="" /></p>
+<p><img src="/images/holiday-cards/bastille-day-2018.JPG" alt="" /></p>
 
 <h3 id="2019">2019</h3>
 <h4 id="all-of-my-ideas-were-too-politicalday">All of my ideas were too political…Day</h4>
 
 <h3 id="2020">2020</h3>
 <h4 id="camp-chippewa-thanksgiving">Camp Chippewa Thanksgiving</h4>
-<p><img src="/images/holiday-cards/thanksgiving-2020.png" alt="" /></p>
+<p><img src="/images/holiday-cards/thanksgiving-2020.PNG" alt="" /></p>
 
 <h3 id="2021">2021</h3>
 <h4 id="happy-little-arbor-day">Happy Little Arbor Day</h4>
-<p><img src="/images/holiday-cards/arbor-day-2021.png" alt="" /></p>
+<p><img src="/images/holiday-cards/arbor-day-2021.PNG" alt="" /></p>
 
 <h3 id="2022">2022</h3>
 <h4 id="coming-soon">Coming Soon</h4>
